--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             <ul>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#"><img src="Image/bars.png" alt=""></a></li>
+                <li><a href="#"><img src="bars.png" alt=""></a></li>
                 <li><a href="#"><button>Sign in</button></a></li>
             </ul>
         </header>
             <div class="mid">
-                <img src="Image/google.png" alt="Google">
+                <img src="google.png" alt="Google">
                 <div class="searchbox">
                     <input type="text" name="search box" class="sbox">
                     <div class="icons">
-                        <div><img src="Image/search.png"></div>
-                        <div><img src="Image/mic.png"></div>
+                        <div><img src="search.png"></div>
+                        <div><img src="mic.png"></div>
                     </div>
                 </div>
                 <div class="btns">
