--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href="#"><img src="bars.png" alt=""></a></li>
+                <li><a href="#"><img src="bar.png" alt=""></a></li>
                 <li><a href="#"><button>Sign in</button></a></li>
             </ul>
         </header>
